--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   },
   "dependencies": {
     "gatsby": "^2.13.67",
+    "gatsby-plugin-react-helmet": "^3.1.3",
+    "gatsby-plugin-sharp": "^2.2.12",
+    "gatsby-source-graphql": "^2.1.5",
+    "gatsby-transformer-sharp": "^2.2.6",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "gatsby-source-graphql": "^2.1.5"
+    "react-dom": "^16.9.0"
   },
   "repository": {
     "url": "https://github.com/gregrickaby/gatsby-graphql-wordpress"
