--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wordpress-graphql-gatasby",
+  "name": "gatsby-graphql-wordpress",
   "version": "0.0.1",
   "description": "A Gatsby site powered by WordPress and GraphQL!",
   "scripts": {
@@ -7,12 +7,15 @@
   },
   "dependencies": {
     "gatsby": "^2.13.67",
+    "gatsby-image": "^2.2.8",
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-sharp": "^2.2.12",
     "gatsby-source-graphql": "^2.1.5",
     "gatsby-transformer-sharp": "^2.2.6",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-helmet": "^5.2.1"
   },
   "repository": {
     "url": "https://github.com/gregrickaby/gatsby-graphql-wordpress"
@@ -21,6 +24,7 @@
   "keywords": [
     "node",
     "gatsby",
+    "graphql",
     "wordpress"
   ]
 }
