--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-graphql-wordpress-starter",
+  "name": "gatsby-starter-wordpress-graphql",
   "version": "0.0.1",
-  "description": "A Gatsby stater powered by GraphQL and WordPress!",
+  "description": "A Gatsby stater powered by WordPress and GraphQL!",
   "scripts": {
     "start": "gatsby develop",
     "build": "gatsby build",
@@ -20,11 +20,10 @@
     "react-helmet": "^5.2.1"
   },
   "repository": {
-    "url": "https://github.com/gregrickaby/gatsby-graphql-wordpress-starter"
+    "url": "https://github.com/gregrickaby/gatsby-starter-wordpress-graphql"
   },
   "license": "MIT",
   "keywords": [
-    "node",
     "gatsby",
     "graphql",
     "wordpress"
