--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "wp-block-components": "^0.2.0"
   },
   "repository": {
     "url": "https://github.com/gregrickaby/gatsby-starter-wordpress-graphql"
