--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.16",
+    "@emotion/styled": "^10.0.15",
     "gatsby": "^2.15.0",
     "gatsby-image": "^2.2.15",
+    "gatsby-plugin-emotion": "^4.1.4",
     "gatsby-plugin-react-helmet": "^3.1.5",
     "gatsby-plugin-sharp": "^2.2.18",
     "gatsby-source-filesystem": "^2.1.18",
