--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-image": "^2.2.15",
     "gatsby-plugin-react-helmet": "^3.1.5",
     "gatsby-plugin-sharp": "^2.2.18",
+    "gatsby-plugin-sitemap": "^2.2.10",
     "gatsby-source-filesystem": "^2.1.18",
     "gatsby-source-graphql": "^2.1.11",
     "gatsby-transformer-sharp": "^2.2.12",
