--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby": "^2.15.19",
     "gatsby-image": "^2.2.20",
     "gatsby-plugin-emotion": "^4.1.7",
+    "gatsby-plugin-gtag": "^1.0.11",
     "gatsby-plugin-react-helmet": "^3.1.8",
     "gatsby-plugin-sharp": "^2.2.25",
     "gatsby-plugin-sitemap": "^2.2.14",
