--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby": "^2.15.29",
     "gatsby-image": "^2.2.24",
     "gatsby-plugin-emotion": "^4.1.9",
+    "gatsby-plugin-feed": "^2.3.15",
     "gatsby-plugin-gtag": "^1.0.11",
     "gatsby-plugin-react-helmet": "^3.1.10",
     "gatsby-plugin-sharp": "^2.2.28",
